--- a/src/common/styles/variable.styl
+++ b/src/common/styles/variable.styl
@@ -1,9 +1,9 @@
 // 颜色定义规范
-$color-background = #222
-$color-background-d = rgba(0, 0, 0, 0.3)
-$color-highlight-background = #333
-$color-dialog-background = #666
-$color-theme = #ffcd32
+$color-background = #202c51
+$color-background-d = #3e59a9
+$color-highlight-background = #999
+$color-dialog-background = red
+$color-theme = #43e784
 $color-theme-d = rgba(255, 205, 49, 0.5)
 $color-sub-theme = #d93f30
 $color-text = #fff
